# VFS-Autopilot-Full-Source-Code

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/: App.tsx  index.css  tauri-plugin-store-api.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src-tauri/src/engine/: browser.rs  captcha.rs  mod.rs  notifier.rs  proxy.rs  scheduler.rs  session.rs
src-tauri/src/engine/countries/: algeria.rs  angola.rs  egypt.rs  india.rs  mod.rs  morocco.rs  pakistan.rs
src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CountryCard.tsx  Input.tsx
src/context/: ThemeContext.tsx
src/data/: countries.ts
src/lib/: secureStorage.ts  tauriEvents.ts  utils.ts
src/locales/: ar.json  en.json  fr.json
src/pages/: ThemePreview.tsx
src/pages/dashboard/: Bookings.tsx  Countries.tsx  DashboardHome.tsx  Notifications.tsx  Settings.tsx
src/pages/onboarding/: AccountSetupScreen.tsx  CompletionScreen.tsx  CountrySelectionScreen.tsx  NotificationSetupScreen.tsx  OnboardingWizard.tsx  WelcomeScreen.tsx
src/store/: accountsStore.ts  notificationsStore.ts  onboardingStore.ts  searchesStore.ts  settingsStore.ts
