[package]
name = "velix"
version = "0.1.0"
description = "Velix VFS Global Booking Automation Backend"
authors = ["Velix Systems"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
thirtyfour = "0.31"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
